--- a/.github/workflows/push_build_almalinux_rpmfusion.yml
+++ b/.github/workflows/push_build_almalinux_rpmfusion.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: mr-smithers-excellent/docker-build-push@v5
         name: Build & push Docker image
         with:
-          image: nikurasukun/almalinux_rpmfusion
+          image: almalinux_rpmfusion
           tags: latest
           registry: ghcr.io
           dockerfile: almalinux_rpmfusion/Dockerfile
